<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/header"
        android:layout_marginBottom="10dp"
        android:id="@+id/edtName"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BoldStyle"
            android:text="@string/type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/edtType"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="78dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:padding="20dp">

        <TextView
            style="@style/BoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/edtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BoldStyle"
            android:text="@string/color"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rGColor"
            android:orientation="vertical"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BoldStyle"
            android:textColor="@color/black"

            android:text="@string/size"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rGSize"
            android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            style="@style/BoldStyle"
            android:layout_width="262dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:onClick="btnShopCart"
            android:paddingLeft="8dp"
            android:text="@string/btnShoppingCart" />

        <Button
            style="@style/BoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:onClick="btnBack"
            android:text="@string/btnBack" />


    </LinearLayout>

</LinearLayout>

<!--<TextView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:textColor="@color/black"-->
<!--android:id="@+id/edtColor"/>-->


<!--<RadioButton android:id="@+id/radio_color1"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="onRadioButtonClicked"/>-->
<!--<RadioButton android:id="@+id/radio_color2"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="onRadioButtonClicked"/>-->
<!--<RadioButton android:id="@+id/radio_color3"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="onRadioButtonClicked"/>-->
<!--<RadioButton android:id="@+id/radio_color4"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:onClick="onRadioButtonClicked"/>-->